tests/errors/test_63.x
// Alias does not exist for module access

fn main() -> int {

    let x = Math::add(1, 2);

    return 0;
}